POFIM-50 Endringsårsak i pdf (#159)
* POFIM-50 Endringsårsak i pdf

Det er også implementert generelle designendringer

* POFIM-50 Endringer etter codereview

* POFIM-50 unused imports